devorg/force-app/main/default/objects/Housing_rates__c/fields/Electricity_rate__c.field-meta.xml
<CustomField>
    <fullName>Electricity_rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Electricity_rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>