devorg/force-app/main/default/objects/Housing_rates__c/validationRules/Positive_gas_rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_gas_rate</fullName>
    <active>true</active>
    <errorConditionFormula>Gas_rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Gas_rate__c</errorDisplayField>
    <errorMessage>Rate value must be positive</errorMessage>
</ValidationRule>